k8s/network-multitool.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-multitool
  annotations:
    cni.projectcalico.org/podIP: 10.226.89.10/32
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      network-multitool; cpu, memory limit for container network-multitool'
    kubernetes.io/psp: psp-default
    sidecar.istio.io/inject: "false"
  creationTimestamp: null
  labels:
    app: network-multitool
    pod-template-hash: 5fb9bd87fd
spec:
  containers:
  - image: docker.artifactory.euw.platformservices.io/praqma/network-multitool
    imagePullPolicy: Always
    name: network-multitool
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  priority: 0
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
