k8s/network-policy-allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all
 namespace: grm-event-test
spec:
 podSelector: {}
 egress:
 - {}
 ingress:
 - {}
 policyTypes:
 - Ingress
 - Egress
